[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://New Piskel-1.png (5).png" type="Texture" id=2]
[ext_resource path="res://New Piskel-1.png (6).png" type="Texture" id=3]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://Cave.tscn" type="PackedScene" id=6]
[ext_resource path="res://Rock.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tree.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.933333, 0.12549, 0.141176, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0.0235294, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
outline_color = Color( 0.0313726, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 885.359, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 93.1309, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -2244.05
margin_top = -1681.51
margin_right = 2401.95
margin_bottom = 1255.49
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cave" parent="." instance=ExtResource( 6 )]
position = Vector2( 40.7955, 38.1074 )

[node name="Label" type="Label" parent="Cave"]
margin_left = 87.8326
margin_top = 9.5409
margin_right = 261.833
margin_bottom = 101.541
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0352941, 0.00392157, 0.00392157, 1 )
text = "Wassup and welcome
to Bob Ross and the
Paintbrush of Power, 
I think you should head
inside!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" parent="." instance=ExtResource( 8 )]
position = Vector2( 153.99, 35.6347 )

[node name="Tree2" parent="." instance=ExtResource( 8 )]
position = Vector2( 238.122, -253.272 )

[node name="Tree3" parent="." instance=ExtResource( 8 )]
position = Vector2( 722.28, -291.37 )

[node name="Tree4" parent="." instance=ExtResource( 8 )]
position = Vector2( -695.269, 168.976 )

[node name="Tree5" parent="." instance=ExtResource( 8 )]
position = Vector2( 414.324, 140.403 )

[node name="Tree6" parent="." instance=ExtResource( 8 )]
position = Vector2( -109.518, -180.252 )

[node name="Tree7" parent="." instance=ExtResource( 8 )]
position = Vector2( 79.3823, -251.685 )

[node name="Tree8" parent="." instance=ExtResource( 8 )]
position = Vector2( 277.807, -53.2597 )

[node name="Tree9" parent="." instance=ExtResource( 8 )]
position = Vector2( 750.972, -178.423 )

[node name="Tree10" parent="." instance=ExtResource( 8 )]
position = Vector2( 860.379, -42.8529 )

[node name="Tree11" parent="." instance=ExtResource( 8 )]
position = Vector2( 791.405, 23.7427 )

[node name="Tree12" parent="." instance=ExtResource( 8 )]
position = Vector2( 693.89, 166.448 )

[node name="Tree13" parent="." instance=ExtResource( 8 )]
position = Vector2( 698.647, 252.07 )

[node name="Tree14" parent="." instance=ExtResource( 8 )]
position = Vector2( 643.943, 316.288 )

[node name="Tree15" parent="." instance=ExtResource( 8 )]
position = Vector2( 396.588, 266.341 )

[node name="Tree16" parent="." instance=ExtResource( 8 )]
position = Vector2( 313.344, 416.181 )

[node name="Tree17" parent="." instance=ExtResource( 8 )]
position = Vector2( 151.612, 256.827 )

[node name="Tree18" parent="." instance=ExtResource( 8 )]
position = Vector2( -2.98529, 349.585 )

[node name="Tree19" parent="." instance=ExtResource( 8 )]
position = Vector2( -212.286, 409.046 )

[node name="Tree20" parent="." instance=ExtResource( 8 )]
position = Vector2( -440.613, 221.151 )

[node name="Tree21" parent="." instance=ExtResource( 8 )]
position = Vector2( -297.909, 130.771 )

[node name="Tree22" parent="." instance=ExtResource( 8 )]
position = Vector2( -433.478, -73.7723 )

[node name="Tree23" parent="." instance=ExtResource( 8 )]
position = Vector2( -616.616, -107.07 )

[node name="Tree24" parent="." instance=ExtResource( 8 )]
position = Vector2( -354.991, -225.991 )

[node name="Tree25" parent="." instance=ExtResource( 8 )]
position = Vector2( -38.6616, -394.858 )

[node name="Tree26" parent="." instance=ExtResource( 8 )]
position = Vector2( 234.856, -347.29 )

[node name="Tree27" parent="." instance=ExtResource( 8 )]
position = Vector2( 360.912, -273.559 )

[node name="Tree28" parent="." instance=ExtResource( 8 )]
position = Vector2( 153.99, -142.746 )

[node name="Tree29" parent="." instance=ExtResource( 8 )]
position = Vector2( 399.712, -10.0636 )

[node name="Tree30" parent="." instance=ExtResource( 8 )]
position = Vector2( 371.994, 358.52 )

[node name="Rock" parent="." instance=ExtResource( 7 )]
position = Vector2( -285.767, 290.383 )

[node name="Rock2" parent="." instance=ExtResource( 7 )]
position = Vector2( -257.258, -388.482 )

[node name="Rock3" parent="." instance=ExtResource( 7 )]
position = Vector2( 507.133, 151.403 )

[node name="Rock4" parent="." instance=ExtResource( 7 )]
position = Vector2( -166.386, 44.4946 )

[node name="Rock5" parent="." instance=ExtResource( 7 )]
position = Vector2( -414.056, 26.6766 )

[node name="Rock6" parent="." instance=ExtResource( 7 )]
position = Vector2( 544.551, 431.145 )

[node name="Rock7" parent="." instance=ExtResource( 7 )]
position = Vector2( 480.406, -155.067 )

[node name="Rock8" parent="." instance=ExtResource( 7 )]
position = Vector2( 405.571, -409.864 )

[node name="Rock9" parent="." instance=ExtResource( 7 )]
position = Vector2( -577.981, -418.773 )

[node name="Rock10" parent="." instance=ExtResource( 7 )]
position = Vector2( 40.5011, -125.02 )

[node name="Rock11" parent="." instance=ExtResource( 7 )]
position = Vector2( -529.627, 313.928 )

[node name="Rock12" parent="." instance=ExtResource( 7 )]
position = Vector2( -531.308, -261.245 )

[node name="Rock13" parent="." instance=ExtResource( 7 )]
position = Vector2( -131.042, -315.063 )

[node name="Rock14" parent="." instance=ExtResource( 7 )]
position = Vector2( 96.0002, -331.881 )

[node name="Rock15" parent="." instance=ExtResource( 7 )]
position = Vector2( 257.452, -151.929 )

[node name="Rock16" parent="." instance=ExtResource( 7 )]
position = Vector2( 571.948, -296.563 )

[node name="Rock17" parent="." instance=ExtResource( 7 )]
position = Vector2( 795.626, -338.608 )

[node name="Rock18" parent="." instance=ExtResource( 7 )]
position = Vector2( 819.064, 104.657 )

[node name="Rock19" parent="." instance=ExtResource( 7 )]
position = Vector2( 528.57, 287.208 )

[node name="Rock20" parent="." instance=ExtResource( 7 )]
position = Vector2( 606.353, 36.3986 )

[node name="Rock21" parent="." instance=ExtResource( 7 )]
position = Vector2( 276.173, 37.986 )

[node name="Rock22" parent="." instance=ExtResource( 7 )]
position = Vector2( 209.502, 157.041 )

[node name="Rock23" parent="." instance=ExtResource( 7 )]
position = Vector2( -246.082, -128.691 )

[node name="Rock24" parent="." instance=ExtResource( 7 )]
position = Vector2( -381.853, 381.448 )

[node name="Rock25" parent="." instance=ExtResource( 7 )]
position = Vector2( -568.324, 79.2584 )

[node name="Rock26" parent="." instance=ExtResource( 7 )]
position = Vector2( 758.743, 391.976 )

[node name="Rock27" parent="." instance=ExtResource( 7 )]
position = Vector2( 661.912, -109.642 )

[node name="Rock28" parent="." instance=ExtResource( 7 )]
position = Vector2( 69.4925, 429.007 )

[node name="Rock29" parent="." instance=ExtResource( 7 )]
position = Vector2( -128.061, 209.846 )

[node name="Rock30" parent="." instance=ExtResource( 7 )]
position = Vector2( -125.255, 290.383 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 58.1251
margin_top = 159.396
margin_right = 89.1251
margin_bottom = 179.396
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Button"]
margin_left = 8.47906
margin_top = 1.34297
margin_right = 48.4791
margin_bottom = 25.343
custom_fonts/font = SubResource( 2 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
margin_left = 0.222263
margin_top = 159.051
margin_right = 31.2223
margin_bottom = 179.051
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Button2"]
margin_left = 7.42462
margin_top = 1.06065
margin_right = 47.4246
margin_bottom = 25.0607
custom_fonts/font = SubResource( 3 )
text = "Z"

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 158.562, 90.8703 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 78.6432
margin_top = 355.509
margin_right = 267.643
margin_bottom = 376.509
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 732.037
margin_top = 447.937
margin_right = 921.037
margin_bottom = 468.937
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="."]
margin_left = 688.52
margin_top = -494.036
margin_right = 877.52
margin_bottom = -473.036
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect9" type="TextureRect" parent="."]
margin_left = -730.022
margin_top = -509.607
margin_right = -541.022
margin_bottom = -488.607
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="."]
margin_left = -697.348
margin_top = 436.164
margin_right = -508.348
margin_bottom = 457.164
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 179.098
margin_top = 285.814
margin_right = 368.098
margin_bottom = 306.814
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="."]
margin_left = 917.654
margin_top = 283.458
margin_right = 1106.65
margin_bottom = 304.458
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect10" type="TextureRect" parent="."]
margin_left = 877.649
margin_top = -488.518
margin_right = 1066.65
margin_bottom = -467.518
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect11" type="TextureRect" parent="."]
margin_left = -706.185
margin_top = -498.139
margin_right = -517.188
margin_bottom = -477.139
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="."]
margin_left = -679.926
margin_top = 270.859
margin_right = -490.929
margin_bottom = 291.859
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D4" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 932.338, 64.2171 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 57.0818, -518.494 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 80.8659, 478.061 )
shape = SubResource( 4 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -744.444, 73.7308 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2( 173.898, 365.99 )
shape = SubResource( 5 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2( 169.573, 377.748 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="StaticBody2D7" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D7"]
position = Vector2( 828.382, 458.565 )
shape = SubResource( 5 )

[node name="StaticBody2D8" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D8"]
position = Vector2( -600.856, 446.565 )
shape = SubResource( 5 )

[node name="StaticBody2D9" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D9"]
position = Vector2( -631.283, -498.19 )
shape = SubResource( 5 )

[node name="StaticBody2D10" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D10"]
position = Vector2( 779.828, -483.071 )
shape = SubResource( 5 )

[node name="StaticBody2D11" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D11"]
position = Vector2( 868.023, -393.617 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="StaticBody2D12" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D12"]
position = Vector2( -714.445, -403.358 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="StaticBody2D13" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D13"]
position = Vector2( -691.137, 365.812 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="StaticBody2D14" type="StaticBody2D" parent="."]
position = Vector2( 0, 7.13525 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D14"]
position = Vector2( 908.653, 372.169 )
rotation = 1.5708
shape = SubResource( 5 )
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_Button2_pressed"]
